--- a/package.json
+++ b/package.json
@@ -1,5 +1,29 @@
 {
   "devDependencies": {
     "async": "^2.6.0"
-  }
+  },
+  "name": "WWW",
+  "version": "1.0.0",
+  "main": "n6.js",
+  "dependencies": {
+    "_async@2.6.0@async": "^2.6.0",
+    "_lodash@4.17.4@lodash": "^4.17.4",
+    "lodash": "^4.17.4",
+    "seajs-seajs-d9056fb": "^3.0.2"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/taxilng/node.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/taxilng/node/issues"
+  },
+  "homepage": "https://github.com/taxilng/node#readme",
+  "description": ""
 }
