--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "multer": "^1.3.0",
     "mysql": "^2.15.0",
     "orm": "^4.0.2",
-    "seajs-seajs-d9056fb": "^3.0.2"
+    "seajs-seajs-d9056fb": "^3.0.2",
+    "ws": "^4.0.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
